# ROS_car_control

./: README.md
control_line_world/: CMakeLists.txt  package.xml
control_line_world/include/: control_line.h
control_line_world/launch/: solution.launch
control_line_world/src/: control_line_func.cpp  control_line_world_node.cpp
opencv_line_detector/: CMakeLists.txt  package.xml
opencv_line_detector/src/: opencv_line_detector_node.cpp
pcl_obstacle_detector/: CMakeLists.txt  package.xml
pcl_obstacle_detector/src/: pcl_obstacle_detector_node.cpp
