<?xml version="1.0"?>
<package format="2">
  <name>control_line_world</name>
  <version>0.0.0</version>
  <description>The control_line_world package</description>

  
  <maintainer email="abcd@todo.todo">abcd</maintainer>


  
  <license>TODO</license>


 
  <buildtool_depend>catkin</buildtool_depend>
  <depend>roscpp</depend>	
  <buildtool_depend>catkin </buildtool_depend>
  <build_depend>geometry_msgs</build_depend>
  <exec_depend>geometry_msgs</exec_depend>
  <build_depend>prius_msgs</build_depend>
  <exec_depend>prius_msgs</exec_depend>
  <build_depend>turtlesim </build_depend>
  <exec_depend>turtlesim </exec_depend>


  
  <export>
    

  </export>
</package>
