<?xml version="1.0"?>
<package> <!--format="2" -->
	<name>opencv_line_detector</name>
	<version>0.0.0</version>
	<description>The opencv_line_detector package</description>

	<maintainer email="abcd@todo.todo">abcd</maintainer>

	<license>TODO</license>

<build_depend>std_msgs</build_depend>
<run_depend>std_msgs</run_depend>




<build_depend>roscpp</build_depend> 
<run_depend>roscpp</run_depend>
	<build_depend>OpenCV</build_depend>
	<run_depend>OpenCV</run_depend>
	<build_depend>cv_bridge</build_depend>
	<run_depend>cv_bridge</run_depend>
	<build_depend>image_transport</build_depend>
	<run_depend>image_transport</run_depend>
	<build_depend>sensor_msgs</build_depend>
	<run_depend>sensor_msgs</run_depend>	
	<buildtool_depend>catkin</buildtool_depend>
	<build_depend>geometry_msgs</build_depend>
	<run_depend>geometry_msgs</run_depend>

<build_depend>prius_msgs</build_depend>
	<run_depend>prius_msgs</run_depend>
<build_depend>vision_msgs</build_depend>
	<run_depend>vison_msgs</run_depend>
	<export>
 

	</export>
</package>
